--- a/DAY-1/Initial.html
+++ b/DAY-1/Initial.html
@@ -10,7 +10,14 @@
    <script>
     // let element=document.querySelector("h1")
     // element.textContent="Hello world"
-    document.getElementsByTagName("h1")[0].innerText="Hello world"
+    
+    // document.getElementsByTagName("h1")[0].innerText="Hello world"
+
+    function init(){
+        document.getElementsByTagName("h1")[0].innerText="Hello world"
+  
+    }
+    window.onload=init
    </script>
 </body>
 </html>
