--- a/DAY-1/Initial.html
+++ b/DAY-1/Initial.html
@@ -17,7 +17,10 @@
         document.getElementsByTagName("h1")[0].innerText="Hello world"
   
     }
-    window.onload=init
+//  in this there is no add and deattch from function so we will addlisten load 
+    // window.onload=init
+    window.addEventListener("load",init)
+    window.removeEventListener("load",init)
    </script>
 </body>
 </html>
