TypeScript Basics ussed in Angular Learned

--- a/DAY-2/step2.html
+++ b/DAY-2/step2.html
@@ -6,25 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        let commonman = {
-title : "Bruce"
-        }
-let addpower = function(power){
-return function(hero){
-return {
-title : hero.title,
-power : power
-}
-}
+    <script src="./script/Assignment.js">
+//         let commonman = {
+// title : "Bruce"
+//         }
+// let addpower = function(power){
+// return function(hero){
+// return {
+// title : hero.title,
+// power : power
+// }
+// }
 
-};
+// };
 
-// let tempCommonman = addpower(7);
-// commonman = tempCommonman(commonman) ;
-commonman = addpower(7) (commonman) ;
+// // let tempCommonman = addpower(7);
+// // commonman = tempCommonman(commonman) ;
+// commonman = addpower(7) (commonman) ;
 
-  console. log(commonman) ;
+//   console. log(commonman) ;
     </script>
 </body>
 </html>
